--- a/src/styles/modals.css
+++ b/src/styles/modals.css
@@ -2,9 +2,11 @@
 /* @import 'modals.css'; */
 
 .modal {
+    opacity: 0;
+    pointer-events: none;
     height: 100vh;
     width: 100vw;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     background-color: rgba(0, 0, 0, 0.2);
@@ -13,8 +15,6 @@
     justify-content: center;
     align-items: center;
     transition: 250ms opacity ease-in;
-    opacity: 0;
-    pointer-events: none;
 }
 
 .modal.visible {
