Added stling to disbale scrolling when modal is visible

--- a/src/styles/modals.css
+++ b/src/styles/modals.css
@@ -22,6 +22,10 @@
     pointer-events: auto;
 }
 
+html.modal-visible {
+    overflow: hidden;
+}
+
 .modal-container {
     background-color: var(--bg-colour);
     border-radius: 15px;
